--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "my-api": "json-server --watch db.json --port 5000"
+    "my-api": "json-server --watch db.json --port 5000",
+    "start-all": "concurrently \"npm run my-api\" \"npm run start\""
   },
   "eslintConfig": {
     "extends": [
